<resources>
    <string name="app_name">chochilyApp</string>
    <string name="start_personal">Personal</string>
    <string name="start_production">Produccion</string>
    <string name="start_inventario">Inventario</string>
    <string name="start_confeccion">Confeccion</string>
    <string name="start_informes">Informes</string>
    <string name="start_alarmas">Alarmas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_name">Andres Manuel Fernando Lopez Obrador</string>
    <string name="entrada">Entrada \t </string>
    <string name="hora">9:30</string>
</resources>
