<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/user_icon"
        android:title="@string/start_personal"
    />

    <item
        android:id="@+id/navigation_produccion"
        android:icon="@drawable/production_icon"
        android:title="@string/start_production" />

    <item
        android:id="@+id/navigation_inventario"
        android:icon="@drawable/inventarioicon"
        android:title="@string/start_inventario" />

    <item
        android:id="@+id/navigation_confeccion"
        android:icon="@drawable/fresaicon"
        android:title="@string/start_confeccion" />


    <item
        android:id="@+id/navigation_alarmas"
        android:icon="@drawable/notificaciones_icon"
        android:title="@string/start_alarmas" />


</menu>
